# faraday

./: .gitignore  CLAUDE.md  eslint.config.mjs  forge.config.ts  index.html  node-zigar.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.main.config.ts  vite.web.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
native/: CMakeLists.txt  helper.c  io.c  io.h  ops.c  ops.h  platform.h  proto.c  proto.h  watch.c  watch.h
native-zig/: build.zig  build.zig.zon
native-zig/src/: fsevents.zig  main.zig  napi.zig  ops.zig  proto.zig  watch.zig
rust/: Cargo.toml
rust/faraday-core/: Cargo.toml
rust/faraday-core/src/: error.rs  ops.rs  watch.rs
rust/faraday-napi/: Cargo.toml
rust/faraday-napi/src/: lib.rs
rust/frdye/: Cargo.toml
scripts/: build-rust.mjs  generate-zigar-config.mjs
src/: elevate.ts  fsOps.ts  fsProxy.ts  fsService.ts  langDetect.ts  main.ts  preload.ts  protocol.ts  types.ts  vite-env.d.ts
src/fs/: elevate.ts  fsOps.ts  fsProxy.ts  ipcHandlers.ts  native.ts  types.ts  wsClient.ts  wsProtocol.ts  wsServer.ts
src/renderer/: FileList.tsx  FileViewer.tsx  ImageViewer.tsx  actionQueue.ts  app.tsx  fsa.ts  fss.ts  iconCache.ts  index.css  material-icons.fs.css  renderer.ts  wsBridge.ts
src/renderer/FileList/: ColumnsScroller.tsx  FileList.tsx  ScrollableContainer.tsx
zig/: build.zig  build.zig.zon
zig/src/: build.extra.zig  fs_zigar.zig  fsevents.zig  main.zig  napi.zig  ops.zig  watch.zig
